--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.0.0-beta.2",
+    "jimp": "^0.22.12",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
+    "nodemailer": "^6.9.13",
+    "socket.io": "^4.7.5",
     "twilio": "^5.0.1"
   },
   "devDependencies": {
